--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js",
-     "build": "echo \"No build step required\""
+    "build": "echo \"No build step required\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
